# registry

./: .gitignore  AUDITORIA-2026-07-02.md  FEEDBACK-USO-IA-20260702.md  MEJORAS-CLAUDE.md  PLAN-EJECUCION-MAESTRO.md  PLAN-MEJORAS-EJECUCION.md  PLAN.md  README.md  RELEASE-v2.0.0.md  SIGUIENTE-ETAPA.md  classifier.py  install-deps.sh  install.ps1  install.sh  registry-build.sh  scanner.py
.github/workflows/: release.yml
app/: README.md  SypnoseRegistry.msix  package-lock.json  package.json  vite.config.ts
app/msix-package/: AppxManifest.xml
app/public/: SypnoseRegistry_0.1.0_x64.msix  test-sigma.html
app/scripts/: build-msix.sh
app/src/: App.tsx
app/src-tauri/: Cargo.toml  do-sign.ps1  serve-msix.ps1  serve.py  sign-msix.bat  tauri.conf.json
app/src-tauri/msix-staging/: AppxManifest.xml
app/src-tauri/src/: ai_bridge.rs  analysis.rs  architecture.rs  chat.rs  export.rs  history.rs  indexer.rs  lib.rs  open_notebook.rs  watcher.rs
app/src/components/: AiBridgeBadge.tsx  ArchitectureView.tsx  ChatPanel.tsx  FilterBar.tsx  GraphCanvas.tsx  IndexingProgress.tsx  NodeDetailPanel.tsx  NotebookLmWizard.tsx  SearchPalette.tsx  StatusBar.tsx  TimeSlider.tsx  Toolbar.tsx  (+1 more)
backstage-api/: gen-worker.js  package-lock.json  package.json  relations-fallback.js  server.js
backstage-api/public/: arch-index.html  arch.html  index.html
backstage-api/routes/: arch.js  codegraph.js  fleet.js  registry.js  supabase.js
backstage-api/scripts/: generate-organigramas.sh
docs/: AI-BRIDGE.md  GUIA-USUARIO.md
media/: README.md
scripts/: build-frontend-api-map.mjs
(+9 files in other folders)
