[package]
name = "sypnose-registry"
version = "2.2.1"
description = "Interactive code dependency graph visualizer"
authors = ["Sypnose Cloud"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dev-dependencies]
# For #[tokio::test] on the async ask_claude no-key path and analysis tests.
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
# For temp-dir in analysis tests.
tempfile = "3"

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rfd = "0.15"
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
tiny_http = "0.12"
notify = "6"
notify-debouncer-full = "0.3"
rusqlite = { version = "0.32", features = ["bundled"] }
# HTTP client for the Anthropic API (M4 chat). rustls-tls avoids an OpenSSL
# system dependency on Windows; json feature for request/response bodies.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
